// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopologyView should display an empty topology correctly 1`] = `
<TopologyView
  className="my-test-class"
  id="simple-test-id"
>
  <Component
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-0"
            >
              <div
                className="pf-c-toolbar"
                id="pf-topology-view-0"
              >
                <Component>
                  <hr
                    className="pf-c-divider"
                  />
                </Component>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        breakpointMods={Array []}
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </Component>
      <Component
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <div
            className="pf-topology-content"
          />
        </div>
      </Component>
    </div>
  </Component>
</TopologyView>
`;

exports[`TopologyView should display topology correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Component
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-1"
            >
              <div
                className="pf-c-toolbar"
                id="pf-topology-view-1"
              >
                <ToolbarContent
                  breakpointMods={Array []}
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          breakpointMods={Array []}
                          className="project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-1-expandable-content-0"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-1-expandable-content-0"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-1-expandable-content-0"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            breakpointMods={Array []}
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  breakpointMods={Array []}
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          breakpointMods={Array []}
                          className="view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-1-expandable-content-1"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-1-expandable-content-1"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-1-expandable-content-1"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            breakpointMods={Array []}
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Component>
                  <hr
                    className="pf-c-divider"
                  />
                </Component>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        breakpointMods={Array []}
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </Component>
      <Component
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
        </div>
      </Component>
    </div>
  </Component>
</TopologyView>
`;

exports[`TopologyView should display topology sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={false}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Component
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-2"
            >
              <div
                className="pf-c-toolbar"
                id="pf-topology-view-2"
              >
                <ToolbarContent
                  breakpointMods={Array []}
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          breakpointMods={Array []}
                          className="project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-2-expandable-content-2"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-2-expandable-content-2"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-2-expandable-content-2"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            breakpointMods={Array []}
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  breakpointMods={Array []}
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          breakpointMods={Array []}
                          className="view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-2-expandable-content-3"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-2-expandable-content-3"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-2-expandable-content-3"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            breakpointMods={Array []}
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Component>
                  <hr
                    className="pf-c-divider"
                  />
                </Component>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        breakpointMods={Array []}
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </Component>
      <Component
        className="pf-topology-container pf-topology-container__with-sidebar"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container pf-topology-container__with-sidebar"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
          <div>
            Test SideBar
          </div>
        </div>
      </Component>
    </div>
  </Component>
</TopologyView>
`;

exports[`TopologyView should display topology w/ open sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={true}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Component
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-3"
            >
              <div
                className="pf-c-toolbar"
                id="pf-topology-view-3"
              >
                <ToolbarContent
                  breakpointMods={Array []}
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          breakpointMods={Array []}
                          className="project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-3-expandable-content-4"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-3-expandable-content-4"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-3-expandable-content-4"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            breakpointMods={Array []}
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  breakpointMods={Array []}
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          breakpointMods={Array []}
                          className="view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-3-expandable-content-5"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-3-expandable-content-5"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-3-expandable-content-5"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            breakpointMods={Array []}
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Component>
                  <hr
                    className="pf-c-divider"
                  />
                </Component>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        breakpointMods={Array []}
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </Component>
      <Component
        className="pf-topology-container pf-topology-container__with-sidebar pf-topology-container__with-sidebar--open"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container pf-topology-container__with-sidebar pf-topology-container__with-sidebar--open"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
          <div>
            Test SideBar
          </div>
        </div>
      </Component>
    </div>
  </Component>
</TopologyView>
`;
